<resources>
    <string name="app_name">DX_4G</string>
    <string name="app_name1">中达电通股份有限公司</string>
    <string name="app_name2">DIACloud</string>
    <string name="edittext1">请输入用户名</string>
    <string name="edittext2">请输入用户密码</string>
    <string name="action_device">设备</string>
    <string name="action_exit">退出</string>
    <string name="dx_show_all">全部</string>
    <string name="dx_show_online">在线</string>
    <string name="toast_dlerror">用户名或密码错误</string>
    <string name="toast_dlshow">用户名或密码为空</string>
    <string name="alarm_page">页数:</string>
    <string name="alarm_number">数量:</string>
    <string name="alarm_totalpage">总页数:</string>
    <string name="alarm_totalalarm">总数:</string>
    <string name="alarm_listname">名称</string>
    <string name="alarm_listcount">内容</string>
    <string name="alarmquery_starttime">开始时间</string>
    <string name="alarmquery_endtime">结束时间</string>
    <string name="alarmquery_text">点击日历图标设置查询日期范围</string>
    <string name="alarmquery_title">时间范围选择</string>
    <string name="check_use">保存用户名</string>
    <string name="check_pas">保存密码</string>
    <string name="user_format">用户名格式错误，请输入Email！</string>
    <string name="report_count">数据总数:</string>
    <string name="report_time">时间</string>
    <string name="alarm_total">报警总数</string>
    <string name="report_value">值</string>
    <string-array name="calendar_string">
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
        <item>日</item>
    </string-array>
</resources>
