<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back7"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagelogin"
        android:layout_width="345dp"
        android:layout_height="127dp"
        android:layout_marginTop="44dp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pas"
        app:srcCompat="@drawable/dia" />

    <EditText
        android:id="@+id/pas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="454dp"
        android:background="@drawable/edittextselect"
        android:drawableStart="@drawable/padlock"
        android:drawableLeft="@drawable/padlock"
        android:ems="10"
        android:hint="@string/edittext2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/edittextselect"
        android:drawableLeft="@drawable/id"
        android:ems="10"
        android:hint="@string/edittext1"
        android:inputType="text"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/pas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709"
        android:drawableStart="@drawable/id"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_use"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check_use"
        android:textSize="20sp"
        android:theme="@style/myCheckBox"
        app:layout_constraintBottom_toTopOf="@+id/imagelogin"
        app:layout_constraintEnd_toStartOf="@+id/checkBox_pas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pas" />

    <CheckBox
        android:id="@+id/checkBox_pas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check_pas"
        android:textSize="20sp"
        android:theme="@style/myCheckBox"
        app:layout_constraintBottom_toTopOf="@+id/imagelogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox_use"
        app:layout_constraintTop_toBottomOf="@+id/pas" />

</androidx.constraintlayout.widget.ConstraintLayout>